--- a/public/signin.css
+++ b/public/signin.css
@@ -4,13 +4,21 @@
     box-sizing: border-box;
 }
 
-.topbar p{
+.topbar h2{
     background-color: #A760FF;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 10vh;
-}
+  }
+  .topbar h3{
+    background-color: #A760FF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1vw;
+  }
+  
 .main_content{
     display: flex;
     width: 100vw;
