--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Schedule</title>
+    <title>ScheduleMate</title>
 </head>
 
 <body>
     <div class="container">
         <div class="topbar">
             <p>
-            <h2>Schedule Management Systems</h2>
+            <h2>ScheduleMate</h2>
+            <h3>Schedule Management System</h3>
             </p>
         </div>
         <br>
